# RTA_2016

./: README.md
G1_3rd-master/kcftracker/: CMakeLists.txt
G1_3rd-master/kcftracker/src/: fhog.cpp  kcftracker.cpp  runtracker.cpp
G1_3rd-master/zhang_suen_thinning/: CMakeLists.txt
G1_3rd-master/zhang_suen_thinning/src/: zhang_suen_thinning.cpp
G1_control/control_main/: CMakeLists.txt  package.xml
G1_control/control_main/config/: baxter_reflex_model.urdf.xacro  baxter_urdf.xml  initial_arms_params.yaml  joint_trajectory_params.yaml  left_end_effector.urdf.xacro  reflex_mass.yaml
G1_control/control_main/launch/: demo_baxter.launch  main.launch  test.rviz
G1_control/control_main/scripts/: baxter_pick_place.py  demo.py  reflex_hand_controller.py  reflex_hand_teleop_key.py  test_code.py
G1_control/g1_control/: CMakeLists.txt  package.xml
G1_control/g1_control/executor_interface/: CMakeLists.txt
G1_control/g1_control/launch/: main.launch
G1_control/g1_control/planning_scene_interface/: CMakeLists.txt
G1_control/g1_control_msgs/: CMakeLists.txt  package.xml
G1_control/g1_control_msgs/msg/: G1ControlErrorCodes.msg  G1ControlGraspCodes.msg  G1ControlStateCodes.msg
G1_control/grasp_generator/: CMakeLists.txt  README.md  package.xml
G1_control/grasp_generator/action/: GenerateGrasps.action
G1_control/grasp_generator/config/: baxter_grasp_data.yaml
G1_control/grasp_generator/launch/: grasp_filter_test.launch  grasp_generator_client.launch  grasp_generator_server.launch  grasp_test.launch  grasp_test_rviz.launch  simple_grasps.rviz
G1_control/grasp_generator/msg/: Grasp.msg  GraspGeneratorOptions.msg
G1_control/grasp_generator/scripts/: server_test.py
G1_control/grasp_generator/src/: grasp_data.cpp  grasp_filter.cpp  grasp_filter_test.cpp  simple_grasps.cpp  simple_grasps_client.cpp  simple_grasps_server.cpp  simple_grasps_test.cpp
G1_demos/demo_object_template/: CMakeLists.txt  package.xml
G1_demos/demo_object_template/launch/: main.launch
G1_demos/demo_object_template/src/: main.cpp
G1_demos/dummy_demo/: CMakeLists.txt  package.xml
G1_demos/dummy_demo/src/: dummy_demo.cpp
G1_demos/object_choice_server/: CMakeLists.txt  CMakeLists.txt~  package.xml
G1_demos/object_choice_server/src/: object_choice.cpp
G1_demos/object_position_server/: CMakeLists.txt  package.xml
G1_demos/object_position_server/src/: update_position.cpp
G1_demos/world_model/: CMakeLists.txt  CMakeLists.txt~  package.xml
G1_demos/world_model/config/: initial_scene.yaml  initial_scene_backup.yaml  initial_scene_microwave.yaml  initial_scene_microwave2.yaml  initial_scene_microwave3.yaml  initial_scene_objects.yaml  initial_scene_pickMicrowave.yaml  initial_scene_update.yaml
G1_demos/world_model/launch/: main.launch
G1_demos/world_model/src/: world_model.cpp
G1_demos/world_model_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml
G1_demos/world_model_msgs/msg/: Location.msg  Object.msg
G1_demos/world_model_msgs/srv/: GetStatesDummy.srv  GetStatesObjects.srv  ImageCoordinate.srv  ImageCoordinate.srv~  ImageUV.srv~  PointCloud2Service.srv  ProgramOrder.srv  QueryLocations.srv  ReconstructedPointCloudQuery.srv  ReconstructionQuery.srv  ReconstructionUpdate.srv  UpdateStatesDummy.srv  UpdateStatesObjects.srv  cmd.srv  cmd.srv~  exec_state.srv
G1_demos/world_model_projections/: CMakeLists.txt  CMakeLists.txt~  package.xml
G1_demos/world_model_projections/src/: world_projection.cpp
G1_interfaces/attr_detection/: CMakeLists.txt  package.xml
G1_interfaces/attr_detection/launch/: main.launch
G1_interfaces/attr_detection/src/: AttributeProcess.cpp  active_detect.cpp
G1_interfaces/graphfilter/: CMakeLists.txt  package.xml  readme.txt
G1_interfaces/graphfilter/launch/: main.launch
G1_interfaces/graphfilter/src/: ArmFingerConstraints.cpp  Centroid.cpp  Constraints.cpp  EdgeConstraints.cpp  FindPlanes.cpp  FingerConstraints.cpp  FitSize.cpp  GraphFilter.cpp  GraphUtilities.cpp  LocationConstraints.cpp  NodeConstraints.cpp  Pca.cpp  SizeConstraints.cpp  Trainer.cpp  ZAdaptiveNormals.cc  graph_test.cpp
G1_interfaces/hand_tracker_2d/: CMakeLists.txt  package.xml
G1_interfaces/hand_tracker_2d/launch/: HandTracker.test
G1_interfaces/hand_tracker_2d/msg/: HandBBox.msg
G1_interfaces/hand_tracker_2d/src/: hand_tracker_2d.cpp
G1_interfaces/interactive_marker_ui/: CMakeLists.txt  package.xml
G1_interfaces/interactive_marker_ui/scripts/: interactive.py
G1_interfaces/interactive_marker_ui/srv/: location_update_confirm.srv  location_update_status.srv
G1_ridgeback/ridgeback_launcher/: CMakeLists.txt  package.xml
G1_ridgeback/ridgeback_launcher/config/: baxter_ridgeback.urdf.xacro  demo_map.pgm  demo_map.yaml
G1_ridgeback/ridgeback_launcher/launch/: amcl.launch  control.launch  laser_scan_map.launch  ridgeback_baxter.launch
G1_ridgeback/ridgeback_launcher/scripts/: remap.py  ros-start-baxter
G1_ridgeback/ridgeback_mover/: CMakeLists.txt  package.xml
G1_ridgeback/ridgeback_mover/scripts/: rotate.py  translate.py
G1_ridgeback/ridgeback_mover/srv/: RotateService.srv  TranslateService.srv
G1_vision/dummy_vision/: CMakeLists.txt  package.xml
G1_vision/dummy_vision/src/: dummy_vision.cpp
G1_vision/finger_detection/: CMakeLists.txt  package.xml
G1_vision/finger_detection/src/: finger_detection.cpp
G1_vision/microwave_detection/: CMakeLists.txt  package.xml
G1_vision/microwave_detection/launch/: main.launch
G1_vision/microwave_detection/src/: FindPlanes.cpp  FitSize.cpp  microwave_detect.cpp  microwave_reconstruct.cpp
G1_vision/object_cls_msgs/: CMakeLists.txt  package.xml
G1_vision/object_cls_msgs/msg/: BBox.msg  BBoxList.msg
G1_vision/object_cls_msgs/srv/: GetObjectClass.srv
G1_vision/object_cls_node/: CMakeLists.txt  package.xml
G1_vision/object_detection_2d/: CMakeLists.txt  Readme.md  package.xml
openni_tools/: .cproject  .gitignore  .project  CMakeLists.txt  openni_tools-config.cmake.in
openni_tools/CMakeModules/: FindOpenNI2.cmake  InstallPkgConfigFile.cmake
openni_tools/scripts/: capture_dataset.py
(+287 files in other folders)
