<package>
  <name>g1_control_msgs</name>
  <version>0.0.0</version>
  <description>Messages, services and actions used by MoveIt</description>
  <author email="isucan@google.com">Ioan Sucan</author>
  <author email="sachinc@sri.com">Sachin Chitta</author>

  <maintainer email="isucan@google.com">Ioan Sucan</maintainer>

  <license>BSD</license>  
  <url type="website">http://moveit.ros.org</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit_msgs/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
