<package>
  <name>grasp_generator</name>
  <version>1.3.1</version>
  <description>
    A basic grasp generator for simple objects such as blocks or cylinders for use with the MoveIt! pick and place pipeline. 
    Does not consider friction cones or other dynamics.
  </description>
  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

<!--   <url type="website">https://github.com/davetcoleman/grasp_generator/</url>
  <url type="bugtracker">https://github.com/davetcoleman/grasp_generator/issues</url>
  <url type="repository">https://github.com/davetcoleman/grasp_generator</url>
 -->
  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>moveit_msgs</build_depend>  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>world_model_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>moveit_visual_tools</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>world_model_msgs</run_depend>

</package>
