<?xml version="1.0"?>
<package>
  <name>world_model</name>
  <version>0.0.0</version>
  <description>The world_model package</description>

  <maintainer email="arc@todo.todo">arc</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>world_model_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>world_model_msgs</run_depend>

  <build_depend>g1_control</build_depend>
  <run_depend>g1_control</run_depend>
  
  <build_depend>pcl_ros</build_depend>
  <run_depend>pcl_ros</run_depend>
  <build_depend>pcl_conversions</build_depend>
  <run_depend>pcl_conversions</run_depend>

  <build_depend>pcl</build_depend>
  <run_depend>pcl</run_depend>
  
  <build_depend>rviz_visual_tools</build_depend>
  <run_depend>rviz_visual_tools</run_depend>



  <export>

  </export>
</package>
