<?xml version="1.0"?>
<package>
  <name>hand_tracker_2d</name>
  <version>0.0.0</version>
  <description>Hand tracker package</description>

  <author email="angelfw84@gmail.com">Fang Wang</author>
  <maintainer email="angelfw84@gmail.com">Fang Wang</maintainer>

  <license>BSD</license>  

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>OpenCV</run_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <export>
  </export>

</package>
