<?xml version="1.0"?>
<package>
  <name>dummy_vision</name>
  <version>0.0.0</version>
  <description>The dummy_vision package</description>

  <maintainer email="arclab@todo.todo">arclab</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>world_model_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>world_model_msgs</run_depend>

  <export>
  </export>
</package>
