<?xml version="1.0"?>
<package>
  <name>object_cls_node</name>
  <version>0.0.0</version>
  <description>Object classifier node package</description>

  <author email="angelfw84@gmail.com">Fang Wang</author>
  <maintainer email="angelfw84@gmail.com">Fang Wang</maintainer>

  <license>BSD</license>  

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>object_cls_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>object_cls_msgs</run_depend>

  <export>
  </export>

</package>
